| Summary: | ASTERISK-21301: ERROR and failure to resolve socket address due to whitespace after port number in SIP Via header | ||
| Reporter: | Martin Vit (festr) | Labels: | |
| Date Opened: | 2013-03-19 04:48:22 | Date Closed: | 2016-09-23 14:19:41 |
| Priority: | Major | Regression? | No |
| Status: | Closed/Complete | Components: | Channels/chan_sip/General |
| Versions: | 11.2.1 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | all | Attachments: | ( 0) 0001-ASTERISK-21301-Avoid-complaining-about-Could-not-res.patch ( 1) asterisk.patch |
| Description: | ERROR[28204][C-00000003]: netsock2.c:273 ast_sockaddr_resolve: getaddrinfo("1.2.3.4", "5060 ", ...): Servname not supported for ai_socktype
WARNING[28204][C-00000003]: chan_sip.c:17830 check_via: Could not resolve socket address for '1.2.3.4:5060 ' the extra space after 5060 port comes from VIA header - 1.2.3.4:5060[space];params which is allowed by RFC I'm not sure what is right way to fix this problem but I did quick and dirty patch to address this. | ||
| Comments: | By: Martin Vit (festr) 2013-03-19 04:50:01.636-0500 this is patch to remove space before port and spaces after port. This is probably NOT right way to do it and it should be done probably in sip channel. By: Martin Vit (festr) 2013-05-14 06:41:25.064-0500 It seems that ASTERISK-21312 is not public accessible? What is status of this please? By: Joshua C. Colp (jcolp) 2013-05-14 06:49:48.087-0500 ASTERISK-21312 was a temporary issue created for internal Digium purposes. Any updates on this issue will be posted here. By: Walter Doekes (wdoekes) 2013-05-29 08:37:33.291-0500 Related: https://reviewboard.asterisk.org/r/2400/ By: Private Name (falves11) 2013-12-16 00:58:29.261-0600 I am affected by this bug. My version is SVN-branch-11-r403635M I am asking that this patch be incorporated in in svn because RFC allows this. By: Gianluca Merlo (gian) 2015-07-20 10:44:25.840-0500 I apologize if I am wrong in commenting on this issue, but I too seem to be affected by it on a much rather recent version than the one originally reported (I can confirm on 13.4.0). Is there any update? By: Francesco Castellano (fcastellano) 2016-03-10 09:10:07.169-0600 An equipment of ours used to send OPTIONS to an Asterisk server with a blank between the Via port and the semicolon, so we patched it to get ridden of the warnings. This patch works on asterisk 13, I just created it from the GIT master HEAD (the parent being commit b12980011abed533eea13d1d3b80faed331a1f1e). But it should apply finely elsewhere. Obviously it is a very small improvement (probably you should skip the internal white spaces too). Regards, Francesco | ||